Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91182

Atlas textures with size not greater than QSG_ATLAS_TRANSIENT_IMAGE_THRESHOLD are not visible with ShaderEffect

XMLWordPrintable

    • All
    • a7b32a3e893892fc96d58af110af568043f09e72 (qt/qtdeclarative/dev) a453e59c2afe42f094511ab1ce8b7c78f23c9c7a (qt/qtdeclarative/6.0) 3162c140f3ace8f070c95165affa7a324512614f (qt/qtdeclarative/6.1)

      Atlas textures with size not greater than QSG_ATLAS_TRANSIENT_IMAGE_THRESHOLD are not visible
      most propably because after call:
      m_nonatlas_texture->setImage(m_image);
      missed call like:
      m_nonatlas_texture->commitTextureOperations(m_atlas->rhi(), resourceUpdates);

        For Gerrit Dashboard: QTBUG-91182
        # Subject Branch Project Status CR V

            janichol Andy Nichols
            roman_genkhel Roman Genhel
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes