Call commitTextureOperations for small atlas textures

Atlas textures with size not greater than
QSG_ATLAS_TRANSIENT_IMAGE_THRESHOLD are not visible

Pick-to: 6.1 6.0
Fixes: QTBUG-91182
Change-Id: I4e72e1c32c15b9e1a21cdb07262f219cc641bb5f
Reviewed-by: Jaeyoon Jung <jaeyoon.jung@lge.com>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>